syntax = "proto3";

package api;

import "resource.proto";

option go_package = "api";


service Statistics {
  rpc GetDashboard(GetDashboardRequest) returns (GetDashboardResponse) {}
  rpc ListWorks(ListWorksRequest) returns (ListWorksResponse) {}
}

message GetDashboardRequest {
  // Page size of works per one request.
  int32 work_page_size = 1;
};

message GetDashboardResponse {
  resource.Dashboard dashboard = 1;
  string work_next_page_token = 2;
}

message ListWorksRequest {
  WorkState state = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListWorksResponse {
  repeated resource.Work works = 1;
  string next_page_token = 2;
}

enum WorkState {
  WORK_STATE_UNSPECIFIED = 0;
  WATCHING = 1;
  WATCHED = 2;
}
