syntax = "proto3";

package resource;

option go_package = "github.com/GoodCodingFriends/animekai/resource";

message Profile {
  // The avator URL of animekai account.
  string avator_url = 1;
  // Total number of records.
  int32 records_count = 2;
  // Number of works which want to watch.
  int32 wanna_watch_count = 3;
  // Number of watching works.
  int32 watching_count = 4;
  // Number of watched works.
  int32 watched_count = 5;
}

message Work {
  // Work's title.
  string work_title = 1;
  // Image URL for the work.
  string image_url = 2;
  // When the work is released on.
  string released_on = 3;
  // How number of episodes the work has.
  int32 episodes_count = 4;

  // ID of the work on Annict.
  string annict_work_id = 5;
  // URL which the work is provided.
  string official_site_url = 6;
  // Wikipedia URL which the work is provided.
  string wikipedia_url = 7;
}

message Dashboard {
  Profile profile = 1;
  repeated Work works = 2;
}
